# supawriter

./: .claude-execution-prompt.md  .dockerignore  .env.example  .gitignore  ARCHITECTURE_GUIDE.md  CLAUDE.md  OAuth_test.py  QUICK_START.md  README.en.md  README.md  debug_hotspots_v2.py  deploy-new.sh  deploy.sh  exec_writer.py  main.py  manage.sh  package-lock.json  package.json  page_settings.py  pyproject.toml  requirements-docker.txt  requirements.txt  settings.py  setup_config.py  start-frontend.sh  start-local.sh  start_unified.py  test_csdn_image.py  test_douyin.py  test_hotspots.py  web.py
.streamlit/: secrets.toml  secrets.toml.example  secrets.toml.template
auth_pages/: account_binding.py  login.py  login_v2.py  profile.py  profile_v2.py
backend/: auth_api.py  requirements_api.txt
community/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
components/: __init__.py  markdown_editor.py
creator/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
data/: users.pkl
deployment/: .env.example  CLEANUP_SUMMARY.md  Dockerfile.backend  Dockerfile.backend.local  Dockerfile.frontend  Dockerfile.frontend.local  Dockerfile.streamlit  Dockerfile.trendradar  Dockerfile.trendradar.local  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  docker-compose.dev.yml  docker-compose.yml  docker-start.sh  optimize_database.py  quick_setup.sh  servers.conf  servers.conf.example  trendradar-entrypoint.sh  verify_all.py  verify_phase0.py  verify_phase1.py  verify_phase2.py
docs/: API.md  ARCHITECTURE_ASSESSMENT_REPORT.md  AUTHENTICATION.md  CHANGELOG_REGISTRATION_REMOVED.md  COMPREHENSIVE_ASSESSMENT_REPORT_2026-03-04.md  DEVELOPMENT_PROGRESS.md  FILE_ORGANIZATION.md  GROWTH_PLAN.md  PROJECT_CLEANUP_PLAN.md  PROMPT_DIFF_ANALYSIS.md  README.md  README_UPDATE_LOG.md  README_UPDATE_SUMMARY.md  SECURITY_FIX_2026-03-04.md  SYSTEM_ARCHITECTURE.md  TRENDRADAR_INTEGRATION.md  WECHAT_LOGIN_SETUP.md  agent-feature.md  chat_history_feature.md  frontend-audit-2026-03-28.md  full-site-test-checklist-2026-03-28.md  stock-prediction-experiment-summary.md
frontend/: .dockerignore  .env.local.example  DEPLOYMENT.md  README.md  STREAMLIT_PAGES_MAPPING.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
monitoring/: grafana-dashboard.json
page/: article_recreation.py  asr.py  auto_write.py  chatbot.py  community_management.py  ddgs_search.py  gpts.py  history.py  home.py  hotspots.py  html_viewer.py  news.py  system_settings.py  transform_article.py  tts.py  tweet_topics.py
pages/: auto_write.py  chatbot.py  document_util.py  gpts.py  home.py  tts.py
scripts/: README.md  add_user_id_to_articles.py  apply_complete_init.py  check_articles_table.py  check_database.py  check_user.py  clear_test_data.py  create_llm_providers_table.py  create_user.py  migrate_database.py  run_migration.py  setup_auth_v2.sh  test_article_save.py  test_daily_news_api.py  test_ddgs_serper.py  test_llm.py  test_news_api.py  test_qiniu_streamlit.py  test_serper_search.py  test_time_filter.py  users_example.json
templates/: dark_theme_template.html
tests/: account-response.test.mjs  api-base-url.test.mjs  api-contract-audit.test.mjs  auth-avatar.test.mjs  backend-cors-config.test.mjs  dockerfile-backend-base-image.test.mjs  dockerfile-backend-local-base-image.test.mjs  dockerfile-backend-local-no-apt-build-deps.test.mjs  dockerfile-backend-no-apt-build-deps.test.mjs  dockerfile-backend-pip-mirror.test.mjs  dockerignore-deployment-scripts.test.mjs  frontend-account-password-mocked.spec.ts  frontend-agent-draft-review.spec.ts  frontend-agent-mocked.spec.ts  frontend-auth-navigation-regression.spec.ts  frontend-batch-mocked.spec.ts  frontend-history-download-mocked.spec.ts  frontend-settings-mocked.spec.ts  frontend-writer-mocked.spec.ts  google-signin-flow.test.mjs  llm-provider-save.test.mjs  manage-build-cleanup-after-success.test.mjs  manage-build-cleanup-only-on-success.test.mjs  manage-build-retry-detects-buildkit-snapshot-error.test.mjs  manage-build-retry-only-wraps-build-commands.test.mjs  repair-schema-drift-creates-only-missing-tables.test.mjs  repair-schema-drift-import-path.test.mjs  repo-hygiene.test.mjs  sanitize-preview-html.test.mjs  settings-admin-tab-access.test.mjs  settings-response.test.mjs  tweet-topics-manual-contract.test.mjs  user-topics-migration.test.mjs
utils/: AMap_adcode_citycode.json  account_binding.py  apply_auth.py  article_queue.py  auth.py  auth_decorator.py  auth_v2.py  config_manager.py  database.py  db_adapter.py  db_utils.py  dd_tools.py  ddgs_utils.py  embedding_utils.py  fastgpt_info.py  gd_weather_query.py  gemma3_client.py  gemmar3_client.py  grab_html_content.py  history_utils.py  html_generator.py  html_image_processor.py  image_filter.py  (+20 more)
(+421 files in other folders)
